// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game render Game component correctly 1`] = `
<div
  className="tennisBackground"
>
  <h2
    className="tennisHeading"
  >
    Play Tennis
  </h2>
  <button
    className="resetGame"
    onClick={[Function]}
  >
    Reset Game
  </button>
  <div
    className="scoreBoard"
  >
    <h3>
      scoreBoard
    </h3>
    <div
      className="playerStyles"
    >
      Player1: 
      <div
        className="scoreStyles"
      >
        0
      </div>
    </div>
    <div
      className="playerStyles"
    >
      Player2: 
      <div
        className="scoreStyles"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="playerBox"
  >
    <div>
      <div
        className="playerHeading"
      >
        Player 1
      </div>
      <div
        className="player"
        defaultValue={1}
        onClick={[Function]}
        value={1}
      />
    </div>
    <div>
      <div
        className="playerHeading"
      >
        Player 2
      </div>
      <div
        className="player"
        defaultValue={2}
        onClick={[Function]}
        value={2}
      />
    </div>
  </div>
  <span />
  <span />
  0
</div>
`;

exports[`Game resets the game 1`] = `
<div
  className="scoreBoard"
>
  <h3>
    scoreBoard
  </h3>
  <div
    className="playerStyles"
  >
    Player1: 
    <div
      className="scoreStyles"
    >
      0
    </div>
  </div>
  <div
    className="playerStyles"
  >
    Player2: 
    <div
      className="scoreStyles"
    >
      0
    </div>
  </div>
</div>
`;
